name:                h1
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jhoxray/h1#readme
license:             BSD3
license-file:        LICENSE
author:              J X-Ray Ho
maintainer:          jho.xray@gmail.com
copyright:           Copyright: (c) 2016 J X-Ray Ho
category:            languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , ghcjs-base
  default-language:    Haskell2010

executable h1-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , ghcjs-dom
                     , h1
  default-language:    Haskell2010

test-suite h1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , h1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jhoxray/h1
